--- a/injury-analysis/Injury_analysis.ipynb
+++ b/injury-analysis/Injury_analysis.ipynb
@@ -1592,6 +1592,18 @@
    "source": [
     "### __Performance Metrics Comparison__"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stats and stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
