--- a/injury-analysis/Injury_analysis.ipynb
+++ b/injury-analysis/Injury_analysis.ipynb
@@ -62,10 +62,10 @@
    "outputs": [],
    "source": [
     "#loading match history \n",
-    "matches_df = pd.read_csv('Match_results.csv')\n",
+    "matches_df = pd.read_csv('datasets/Match_results.csv')\n",
     "\n",
     "#loading injury history of key players\n",
-    "key_injuries_df = pd.read_csv('KP_injury_history.csv')\n"
+    "key_injuries_df = pd.read_csv('datasets/KP_injury_history.csv')\n"
    ]
   },
   {
