Performance metrics section
prepared layout for the section

--- a/injury-analysis/Injury_analysis.ipynb
+++ b/injury-analysis/Injury_analysis.ipynb
@@ -1597,7 +1597,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "stats and stuff"
+    "Various performance/match metrics will be compared between periods of increasing and decreasing number of injuries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the plots and findings above:\\\n",
+    "_[\"2023-08 - 2023-09\";  \"2023-10 - 2023-11\";  \"2024-01 - 2024-03\"] --> Periods of increasing injuries_\\\n",
+    "_[\"2023-09 - 2023-10\";  \"2023-11 - 2024-01\";  \"2024-03 - 2024-05\"] --> Periods of decreasing injuries_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _Points Earned_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _Goals Scored_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _Goals Conceded_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _Win Rate_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pass"
    ]
   },
   {
