--- a/injury-analysis/Injury_analysis.ipynb
+++ b/injury-analysis/Injury_analysis.ipynb
@@ -1618,11 +1618,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatetimeIndex(['2023-08-01', '2023-08-02', '2023-08-03', '2023-08-04',\n",
+      "               '2023-08-05', '2023-08-06', '2023-08-07', '2023-08-08',\n",
+      "               '2023-08-09', '2023-08-10', '2023-08-11', '2023-08-12',\n",
+      "               '2023-08-13', '2023-08-14', '2023-08-15', '2023-08-16',\n",
+      "               '2023-08-17', '2023-08-18', '2023-08-19', '2023-08-20',\n",
+      "               '2023-08-21', '2023-08-22', '2023-08-23', '2023-08-24',\n",
+      "               '2023-08-25', '2023-08-26', '2023-08-27', '2023-08-28',\n",
+      "               '2023-08-29', '2023-08-30', '2023-08-31', '2023-09-01'],\n",
+      "              dtype='datetime64[ns]', freq='D')\n",
+      "DatetimeIndex(['2023-10-01', '2023-10-02', '2023-10-03', '2023-10-04',\n",
+      "               '2023-10-05', '2023-10-06', '2023-10-07', '2023-10-08',\n",
+      "               '2023-10-09', '2023-10-10', '2023-10-11', '2023-10-12',\n",
+      "               '2023-10-13', '2023-10-14', '2023-10-15', '2023-10-16',\n",
+      "               '2023-10-17', '2023-10-18', '2023-10-19', '2023-10-20',\n",
+      "               '2023-10-21', '2023-10-22', '2023-10-23', '2023-10-24',\n",
+      "               '2023-10-25', '2023-10-26', '2023-10-27', '2023-10-28',\n",
+      "               '2023-10-29', '2023-10-30', '2023-10-31', '2023-11-01'],\n",
+      "              dtype='datetime64[ns]', freq='D')\n",
+      "DatetimeIndex(['2024-01-01', '2024-01-02', '2024-01-03', '2024-01-04',\n",
+      "               '2024-01-05', '2024-01-06', '2024-01-07', '2024-01-08',\n",
+      "               '2024-01-09', '2024-01-10', '2024-01-11', '2024-01-12',\n",
+      "               '2024-01-13', '2024-01-14', '2024-01-15', '2024-01-16',\n",
+      "               '2024-01-17', '2024-01-18', '2024-01-19', '2024-01-20',\n",
+      "               '2024-01-21', '2024-01-22', '2024-01-23', '2024-01-24',\n",
+      "               '2024-01-25', '2024-01-26', '2024-01-27', '2024-01-28',\n",
+      "               '2024-01-29', '2024-01-30', '2024-01-31', '2024-02-01',\n",
+      "               '2024-02-02', '2024-02-03', '2024-02-04', '2024-02-05',\n",
+      "               '2024-02-06', '2024-02-07', '2024-02-08', '2024-02-09',\n",
+      "               '2024-02-10', '2024-02-11', '2024-02-12', '2024-02-13',\n",
+      "               '2024-02-14', '2024-02-15', '2024-02-16', '2024-02-17',\n",
+      "               '2024-02-18', '2024-02-19', '2024-02-20', '2024-02-21',\n",
+      "               '2024-02-22', '2024-02-23', '2024-02-24', '2024-02-25',\n",
+      "               '2024-02-26', '2024-02-27', '2024-02-28', '2024-02-29',\n",
+      "               '2024-03-01'],\n",
+      "              dtype='datetime64[ns]', freq='D')\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "pass\n",
+    "\n",
+    "period_inc_injuries = [pd.date_range(start=\"2023-08\",end=\"2023-09\"), pd.date_range(start=\"2023-10\",end=\"2023-11\"), pd.date_range(start=\"2024-01\",end=\"2024-03\")]\n",
+    "period_dec_injuries = [pd.date_range(start=\"2023-09\",end=\"2023-10\"), pd.date_range(start=\"2023-11\",end=\"2024-01\"), pd.date_range(start=\"2024-03\",end=\"2024-05\")]\n",
+    "\n",
+    "for date in period_inc_injuries:\n",
+    "    for index, row in matches_df:\n",
+    "        if row['Match Date'] == date: \n",
+    "    "
    ]
   },
   {
@@ -1634,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
