--- a/injury-analysis/Injury_analysis.ipynb
+++ b/injury-analysis/Injury_analysis.ipynb
@@ -32,6 +32,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "\n",
     "### __Importing Libraries__"
    ]
   },
@@ -52,6 +54,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "\n",
     "### __Loading Datasets__"
    ]
   },
@@ -1079,6 +1083,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "\n",
     "### __Data Cleaning__"
    ]
   },
@@ -1154,6 +1160,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "\n",
     "### __Impact of Key Player Injuries on Team Performance__"
    ]
   },
@@ -1590,6 +1598,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "\n",
     "### __Performance Metrics Comparison__"
    ]
   },
